Fix grid-gap percentage

--- a/src/pages/style.module.less
+++ b/src/pages/style.module.less
@@ -22,22 +22,24 @@
 
 .work{
     display: grid;
-    gap: 2%;
 
     @media @mobile {
         grid-template-columns: repeat(1, 1fr);
+        grid-gap: 24vw;
         margin: 5% 6%;
         margin-top: 30%;
     }
 
     @media @tablet {
         grid-template-columns: repeat(12, 1fr);
+        grid-gap: 6vw;
         margin: 5% 6%;
         margin-top: 14%;
     }
 
     @media @desktop {
         grid-template-columns: repeat(12, 1fr);
+        grid-gap: 6vw;
         margin: 3% 5%;
         margin-top: 8%;
     }
